# sohell

./: .gitignore  Readme.md  pyproject.toml
sohell/: basis_functions.py  bayesian_regression.py  common.py  cycle_plotting.py  evaluation_helpers.py  find_cycles.py  soc_ocv.txt
sohell/baseline/: Dockerfile  constants.py  cycle_finder.py  label_evaluation.py  labeler.py  smac_utils.py  utils.py
sohell/baseline/label_smoothening/: Manifest.toml  Project.toml  label_smoothening.py  labels_factor_graph_greater_than.jl
sohell/baseline/simulation_utils/: parameter_set.py  simulator.py
sohell/baseline_evaluation_results/quantitative/: bo_info.json  mse_at_runtimes.json  result_n_1.json  result_n_10.json  result_n_100.json  result_n_101.json  result_n_102.json  result_n_103.json  result_n_104.json  result_n_105.json  result_n_106.json  result_n_107.json  result_n_108.json  result_n_109.json  result_n_11.json  result_n_110.json  result_n_111.json  result_n_112.json  (+233 more)
sohell/baseline_quantitative/: __main__.py  trial_evaluation.py
sohell/blr/: __main__.py
sohell/bo_evaluation/: __main__.py
sohell/experiment_utils/: label_loading.py  plotting.py  synthetic_cycles.py
sohell/labeling/: __main__.py  cycle_finder.py  docker-compose.yml
sohell/simulator/: README.md  batterycell.cpp  batterycell.h  betterpack.cpp  betterpack.h  constants.h  currentlimits.cpp  currentlimits.h  internalresistance.cpp  internalresistance.h  pyproject.toml  python.cpp  sococvmapping.cpp  sococvmapping.h  sohcrmapping.cpp  sohcrmapping.h  splines.cpp  splines.h  test.cpp  test.py
(+3525 files in other folders)
