[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "cpp_betterpack"
version = "0.0.1"
description=""
readme = "README.md"
authors = [
  { name = "Ralf Herbrich", email = "ralf.herbrich@hpi.de" },
  { name = "Lukas Hoenig", email = "lukas.hoenig@betteries.com" },
  { name = "Simon Thormeyer", email = "simon.thormeyer@student.hpi.de" }
]
requires-python = ">=3.7"


[tool.scikit-build]
wheel.expand-macos-universal-tags = true
